# sys-prog-2

./: CMakeLists.txt  README.md
include/: help.h  processes.h  users.h
src/: help.c  main.c  processes.c  users.c
